# rtk

./: ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  demo-realistic.sh  demo.cast  install.sh
.claude/hooks/bash/: pre-commit-format.sh
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  new-tool-request.yml
.github/workflows/: release.yml  validate-docs.yml
Formula/: rtk.rb
docs/: ADDING_TOOLS.md
hooks/: rtk-cursor-rules.mdc  rtk-rewrite.sh
scripts/: test-all.sh  validate-docs.sh
src/: cc_economics.rs  ccusage.rs  container.rs  filter.rs  gain.rs  git.rs  init.rs  local_llm.rs  ls.rs  main.rs  read.rs  runner.rs  scaffold_cmd.rs  session_stats.rs
src/discover/: cline_provider.rs  codex_provider.rs  cursor_provider.rs  mod.rs  provider.rs  report.rs
src/learn/: mod.rs
