[package]
name = "rtk"
version = "0.5.0"
edition = "2021"
authors = ["Patrick Szymkowiak"]
description = "Rust Token Killer - High-performance CLI proxy to minimize LLM token consumption"
license = "MIT"
repository = "https://github.com/pszymkowiak/rtk"
readme = "README.md"
keywords = ["cli", "llm", "token", "filter", "productivity"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# CLI framework
clap = { version = "4", features = ["derive"] }

# Error handling
anyhow = "1.0"

# File system traversal with gitignore support
ignore = "0.4"
walkdir = "2"

# Regex for code filtering
regex = "1"
lazy_static = "1.4"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Terminal output
colored = "2"

# Home directory
dirs = "5"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
